Trying to fix centering issue on mobile

--- a/index.css
+++ b/index.css
@@ -686,7 +686,7 @@ animation-delay: 12s; /* Delay the start of the third segment by 8 seconds */
 https://www.athleticlab.com/# */ 
 @media (max-width: 768px){
   body {
-    margin: 0;
+    margin: 0; 
     /*background: url("data:image/jpeg;base64,/9j/4AAQSkZJRgABAQAAAQABAAD/2wCEAAkGBxITEhUSEhMWFRUXFxcYFx*/
     background-color: #fafafa; 
    
@@ -1995,7 +1995,9 @@ https://www.athleticlab.com/# */
 }
 @media(max-width: 480px){
   body {
-    margin: 0;
+    margin-left: auto !important;
+    margin-right: auto !important ;
+    justify-content: center !important;
     /*background: url("data:image/jpeg;base64,/9j/4AAQSkZJRgABAQAAAQABAAD/2wCEAAkGBxITEhUSEhMWFRUXFxcYFx*/
     background-color: #fafafa; 
     overflow-x:hidden; 
